--- a/softshutdown.desktop
+++ b/softshutdown.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=softpowe.py
 Comment=My Python Program
-Exec=python /home/pi/soft/softpowe.py
+Exec=python /home/pi/SNESPi/softshutdown.py
 Icon=/home/pi/example.png
 Terminal=false
 MultipleArgs=false
